test/libvlc/core.c
@@ -77,21 +77,7 @@ static void test_audio_output (void)
 
     puts ("Audio outputs:");
     for (const libvlc_audio_output_t *o = mods; o != NULL; o = o->p_next)
-    {
-        libvlc_audio_output_device_t *devs;
-
         printf(" %s: %s\n", o->psz_name, o->psz_description);
-
-        devs = libvlc_audio_output_device_list_get (vlc, o->psz_name);
-        if (devs == NULL)
-            continue;
-        for (const libvlc_audio_output_device_t *d = devs;
-             d != NULL;
-             d = d->p_next)
-             printf("  %s: %s\n", d->psz_device, d->psz_description);
-
-        libvlc_audio_output_device_list_release (devs);
-    }
     libvlc_audio_output_list_release (mods);
     libvlc_release (vlc);
 }
